remove redundant animations, add proper background image, fix text overflow

--- a/style.css
+++ b/style.css
@@ -6,20 +6,19 @@ body {
 	font-family: "Indie Flower";
 	align-content: center;
 	justify-content: center;
-	background: rgb(99,93,201);
-background: linear-gradient(127deg, rgb(180, 246, 255) 0%, rgb(0, 217, 255) 46%, rgb(0, 0, 0) 100%);
+	background: url(https://images.unsplash.com/photo-1596798164026-4485ad66e508);
 	background-position: center;
 	background-size: cover;
 	
 }
 #wip {
-	color: #000000;
+	color: #ffffff;
 	position: fixed;
 	left: 2px;
 	bottom: 0%;
 	animation: bounce; 
-  animation-duration: 2s;
-  animation-delay: 1s;
+    animation-duration: 1.4s;
+    animation-delay: 1s;
 }
 #content {
 	height: 100vh;
@@ -33,7 +32,7 @@ background: linear-gradient(127deg, rgb(180, 246, 255) 0%, rgb(0, 217, 255) 46%,
 
 }
 #card {
-	background: rgba(186, 227, 255, 0.767);
+	background: url(https://images.unsplash.com/photo-1596798164026-4485ad66e508);
 	filter: blur(8px);
     -o-filter:blur(4px);
     -ms-filter:blur(4px);
@@ -48,8 +47,6 @@ background: linear-gradient(127deg, rgb(180, 246, 255) 0%, rgb(0, 217, 255) 46%,
 	overflow: hidden;
 	padding: 2pt;
 	border-radius: 20pt;
-	animation: rotateIn;
-	animation-duration: 01s;
 
 }
 
@@ -58,7 +55,9 @@ background: linear-gradient(127deg, rgb(180, 246, 255) 0%, rgb(0, 217, 255) 46%,
 	  height: 75vh; 
 	  padding: 20pt;
   }
-
+  #profile:hover {
+	  cursor: none;
+}
 
   #github { 
 	  padding: 20pt;
@@ -71,11 +70,12 @@ background: linear-gradient(127deg, rgb(180, 246, 255) 0%, rgb(0, 217, 255) 46%,
 	animation-duration: 1s;
   }
   #txt {
+	  color: #ffffff;
 	padding: 20pt;
 	font-size: 14pt;
 	  height: 0px;
 	  max-width: 200px;
 	  text-align: center;
 	  position: absolute;
-	  overflow-block: auto;
+	 overflow: visible;
   }
